Reetan.Nayak Dev 25/force-app/main/default/objects/Idea_Milestone__c/Idea_Milestone__c.object-meta.xml
<CustomObject>
    <label>Idea Milestone</label>
    <nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Idea Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>