Reetan.Nayak Dev 25/force-app/main/default/objects/Idea_Milestone__c/fields/Deliverables__c.field-meta.xml
<CustomField>
    <fullName>Deliverables__c</fullName>
    <label>Deliverables</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>