Reetan.Nayak Dev 25/force-app/main/default/objects/Idea_Milestone__c/fields/Idea_in_Action__c.field-meta.xml
<CustomField>
    <fullName>Idea_in_Action__c</fullName>
    <label>Idea in Action</label>
    <referenceTo>Ideas_Projects__c</referenceTo>
    <relationshipLabel>Idea Milestones</relationshipLabel>
    <relationshipName>R00N30000009KtNuEAK</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>